{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 217,
  "lineage": "c278e78a-00c3-d09c-1014-8285098787b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:network-acl/acl-06c24537541ca16b9",
            "default_network_acl_id": "acl-06c24537541ca16b9",
            "egress": [],
            "id": "acl-06c24537541ca16b9",
            "ingress": [],
            "owner_id": "288778800571",
            "subnet_ids": [],
            "tags": {
              "Name": "muscleTech-prod-default-nacl"
            },
            "tags_all": {
              "Name": "muscleTech-prod-default-nacl"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:route-table/rtb-08fdcaebc737fa3cc",
            "default_route_table_id": "rtb-08fdcaebc737fa3cc",
            "id": "rtb-08fdcaebc737fa3cc",
            "owner_id": "288778800571",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "muscleTech-prod-default-rtb"
            },
            "tags_all": {
              "Name": "muscleTech-prod-default-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:security-group/sg-0977b26c8d2ccc063",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0977b26c8d2ccc063",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "288778800571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "muscleTech-prod-default-sg"
            },
            "tags_all": {
              "Name": "muscleTech-prod-default-sg"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d1740263f9a155c",
            "association_id": "eipassoc-07d3412c250d4ebfd",
            "domain": "vpc",
            "id": "eipalloc-08d1740263f9a155c",
            "instance": "i-09bfeefc8fc23a5e6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0963af2cd48d3966b",
            "private_dns": "ip-10-0-0-122.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.122",
            "public_dns": "ec2-3-36-19-113.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.19.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "muscleTech-prod-bastion-eip"
            },
            "tags_all": {
              "Name": "muscleTech-prod-bastion-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_instance.bastion",
            "aws_security_group.bastion_ec2",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03aebd71db71dedce",
            "association_id": "eipassoc-0c5de25cde3542442",
            "domain": "vpc",
            "id": "eipalloc-03aebd71db71dedce",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-024b758c2bf9ea6b5",
            "private_dns": "ip-10-0-0-201.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.201",
            "public_dns": "ec2-15-164-30-165.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.30.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "muscleTech-prod-natgw1-eip"
            },
            "tags_all": {
              "Name": "muscleTech-prod-natgw1-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cf633fe86e51bf0",
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:instance/i-09bfeefc8fc23a5e6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "muscleTech-prod-bastion-instanceprofile",
            "id": "i-09bfeefc8fc23a5e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "python",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0963af2cd48d3966b",
            "private_dns": "ip-10-0-0-122.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.122",
            "public_dns": "ec2-3-36-19-113.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.19.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "muscleTech-prod-bastion-ec2"
                },
                "throughput": 125,
                "volume_id": "vol-0fc25ed7023698f7d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcadd38c5d8ea6e1",
            "tags": {
              "Name": "muscleTech-prod-bastion-ec2"
            },
            "tags_all": {
              "Name": "muscleTech-prod-bastion-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05787d0f03d4dd5da"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_security_group.bastion_ec2",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cf633fe86e51bf0",
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:instance/i-0fa4cbb82f3405621",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "muscleTech-prod-private_ec2-instanceprofile",
            "id": "i-0fa4cbb82f3405621",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "python",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdb12ae3d1f0586f",
            "private_dns": "ip-10-0-11-42.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "muscleTech-prod-private-ec2"
                },
                "throughput": 125,
                "volume_id": "vol-06d36ad324627434a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf5b7a9c1bbfab05",
            "tags": {
              "Name": "muscleTech-prod-private-ec2"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03612f28b497e6459"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.private_ec2",
            "aws_iam_role.private_ec2",
            "aws_security_group.private_ec2",
            "aws_subnet.private1",
            "aws_vpc.vpc",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:internet-gateway/igw-051f2ac5c7db30a83",
            "id": "igw-051f2ac5c7db30a83",
            "owner_id": "288778800571",
            "tags": {
              "Name": "muscleTech-prod-igw"
            },
            "tags_all": {
              "Name": "muscleTech-prod-igw"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03aebd71db71dedce",
            "connectivity_type": "public",
            "id": "nat-05c940210c830bd87",
            "network_interface_id": "eni-024b758c2bf9ea6b5",
            "private_ip": "10.0.0.201",
            "public_ip": "15.164.30.165",
            "subnet_id": "subnet-0fcadd38c5d8ea6e1",
            "tags": {
              "Name": "muscleTech-prod-natgw1"
            },
            "tags_all": {
              "Name": "muscleTech-prod-natgw1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.igw",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:network-acl/acl-014dff0d0a7537b6e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-014dff0d0a7537b6e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "288778800571",
            "subnet_ids": [
              "subnet-0b0d00fe7bce1a057",
              "subnet-0bf5b7a9c1bbfab05"
            ],
            "tags": {
              "Name": "muscleTech-prod-private1-nacl"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private1-nacl"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:network-acl/acl-0e717c8cd522aed65",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e717c8cd522aed65",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "288778800571",
            "subnet_ids": [
              "subnet-0cc40c92c7841bf1b",
              "subnet-0db3fd42aff10e291"
            ],
            "tags": {
              "Name": "muscleTech-prod-private3-nacl"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private3-nacl"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private3",
            "aws_subnet.private4",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:network-acl/acl-0da216a1a99e2b466",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0da216a1a99e2b466",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "288778800571",
            "subnet_ids": [
              "subnet-02f867bde42338b38",
              "subnet-0fcadd38c5d8ea6e1"
            ],
            "tags": {
              "Name": "muscleTech-prod-public-nacl"
            },
            "tags_all": {
              "Name": "muscleTech-prod-public-nacl"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:network-acl/acl-0444b0445384a4a4f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0444b0445384a4a4f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "288778800571",
            "subnet_ids": [
              "subnet-05db7f9b591d12ac6",
              "subnet-07d56172ff72e8603"
            ],
            "tags": {
              "Name": "muscleTech-prod-public3-nacl"
            },
            "tags_all": {
              "Name": "muscleTech-prod-public3-nacl"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public3",
            "aws_subnet.public4",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-080ee58be24ac29d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c940210c830bd87",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080ee58be24ac29d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051f2ac5c7db30a83",
            "id": "r-rtb-05d0d907b7686ce8c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d0d907b7686ce8c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051f2ac5c7db30a83",
            "id": "r-rtb-054f9f07331accd6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054f9f07331accd6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:route-table/rtb-080ee58be24ac29d3",
            "id": "rtb-080ee58be24ac29d3",
            "owner_id": "288778800571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c940210c830bd87",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "muscleTech-prod-private1-rtb"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private1-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:route-table/rtb-0fde7ac639e424581",
            "id": "rtb-0fde7ac639e424581",
            "owner_id": "288778800571",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "muscleTech-prod-private3-rtb"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private3-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:route-table/rtb-05d0d907b7686ce8c",
            "id": "rtb-05d0d907b7686ce8c",
            "owner_id": "288778800571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051f2ac5c7db30a83",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "muscleTech-prod-public1-rtb"
            },
            "tags_all": {
              "Name": "muscleTech-prod-public1-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:route-table/rtb-054f9f07331accd6f",
            "id": "rtb-054f9f07331accd6f",
            "owner_id": "288778800571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051f2ac5c7db30a83",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "muscleTech-prod-public3-rtb"
            },
            "tags_all": {
              "Name": "muscleTech-prod-public3-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0192ba261737bb259",
            "route_table_id": "rtb-080ee58be24ac29d3",
            "subnet_id": "subnet-0bf5b7a9c1bbfab05"
          },
          "dependencies": [
            "aws_route_table.private1",
            "aws_subnet.private1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b33cf3dece263c57",
            "route_table_id": "rtb-080ee58be24ac29d3",
            "subnet_id": "subnet-0b0d00fe7bce1a057"
          },
          "dependencies": [
            "aws_route_table.private1",
            "aws_subnet.private2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d10def71dcf4ce4",
            "route_table_id": "rtb-0fde7ac639e424581",
            "subnet_id": "subnet-0db3fd42aff10e291"
          },
          "dependencies": [
            "aws_route_table.private3",
            "aws_subnet.private3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0782ff9dc6cc11f24",
            "route_table_id": "rtb-0fde7ac639e424581",
            "subnet_id": "subnet-0cc40c92c7841bf1b"
          },
          "dependencies": [
            "aws_route_table.private3",
            "aws_subnet.private4",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec19ea7da064e878",
            "route_table_id": "rtb-05d0d907b7686ce8c",
            "subnet_id": "subnet-0fcadd38c5d8ea6e1"
          },
          "dependencies": [
            "aws_route_table.public1",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871723feef530067",
            "route_table_id": "rtb-05d0d907b7686ce8c",
            "subnet_id": "subnet-02f867bde42338b38"
          },
          "dependencies": [
            "aws_route_table.public1",
            "aws_subnet.public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0342cd454d01b8389",
            "route_table_id": "rtb-054f9f07331accd6f",
            "subnet_id": "subnet-05db7f9b591d12ac6"
          },
          "dependencies": [
            "aws_route_table.public3",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011ba34ee026d891b",
            "route_table_id": "rtb-054f9f07331accd6f",
            "subnet_id": "subnet-07d56172ff72e8603"
          },
          "dependencies": [
            "aws_route_table.public3",
            "aws_subnet.public4",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:security-group/sg-05787d0f03d4dd5da",
            "description": "for bastion ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05787d0f03d4dd5da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "muscleTech-prod-bastion-sg",
            "name_prefix": "",
            "owner_id": "288778800571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "muscleTech-prod-bastion-sg"
            },
            "tags_all": {
              "Name": "muscleTech-prod-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:security-group/sg-057cee8dcd742ef25",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057cee8dcd742ef25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysqldb",
            "name_prefix": "",
            "owner_id": "288778800571",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:security-group/sg-03612f28b497e6459",
            "description": "for private ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03612f28b497e6459",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05787d0f03d4dd5da"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "muscleTech-prod-private-sg",
            "name_prefix": "",
            "owner_id": "288778800571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "muscleTech-prod-private-sg"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_egress_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-773880206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-057cee8dcd742ef25",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_instance",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_ingress_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3381137166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-057cee8dcd742ef25",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_instance",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-1749109172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03612f28b497e6459",
            "self": false,
            "source_security_group_id": "sg-05787d0f03d4dd5da",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_ec2",
            "aws_security_group.private_ec2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:subnet/subnet-0bf5b7a9c1bbfab05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf5b7a9c1bbfab05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288778800571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "muscleTech-prod-private1-subnet"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private1-subnet"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:subnet/subnet-0b0d00fe7bce1a057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0d00fe7bce1a057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288778800571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "muscleTech-prod-private2-subnet"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private2-subnet"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:subnet/subnet-0db3fd42aff10e291",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db3fd42aff10e291",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288778800571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "muscleTech-prod-private3-subnet"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private3-subnet"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:subnet/subnet-0cc40c92c7841bf1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc40c92c7841bf1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288778800571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "muscleTech-prod-private4-subnet"
            },
            "tags_all": {
              "Name": "muscleTech-prod-private4-subnet"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:subnet/subnet-0fcadd38c5d8ea6e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcadd38c5d8ea6e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288778800571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "muscleTech-prod-public1-subnet"
            },
            "tags_all": {
              "Name": "muscleTech-prod-public1-subnet"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:subnet/subnet-02f867bde42338b38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f867bde42338b38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288778800571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "muscleTech-prod-public2-subnet"
            },
            "tags_all": {
              "Name": "muscleTech-prod-public2-subnet"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:subnet/subnet-05db7f9b591d12ac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05db7f9b591d12ac6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288778800571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "muscleTech-prod-public3-subnet"
            },
            "tags_all": {
              "Name": "muscleTech-prod-public3-subnet"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:subnet/subnet-07d56172ff72e8603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d56172ff72e8603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288778800571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "muscleTech-prod-public4-subnet"
            },
            "tags_all": {
              "Name": "muscleTech-prod-public4-subnet"
            },
            "vpc_id": "vpc-0a105c31ad5850b0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:288778800571:vpc/vpc-0a105c31ad5850b0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c24537541ca16b9",
            "default_route_table_id": "rtb-08fdcaebc737fa3cc",
            "default_security_group_id": "sg-0977b26c8d2ccc063",
            "dhcp_options_id": "dopt-0a1d13c08d3d8c7c2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a105c31ad5850b0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fdcaebc737fa3cc",
            "owner_id": "288778800571",
            "tags": {
              "Name": "muscleTech-prod-vpc"
            },
            "tags_all": {
              "Name": "muscleTech-prod-vpc"
            }
          }
        }
      ]
    }
  ]
}